--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meddalian-accountant",
+  "name": "medallion-accountant",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "next": "15.3.4",
+    "nodemailer": "^7.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
