--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.0.0",
     "@types/nodemailer": "^6.4.17",
     "next": "15.3.4",
     "nodemailer": "^7.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
